fix: Don't use fallback color with initial to ensure dark mode stillll works

--- a/_includes/styles.css
+++ b/_includes/styles.css
@@ -59,8 +59,8 @@ a {
   padding: 1rem;
   font-size: 3vmax;
 
-  /* setting text color of links to match other canvastext */
-  color: var(--canvastext);
+  /* resetting the color */
+  color: initial;
   text-align: center;
   margin: 1rem 0;
   /* seems to cause the border I want via apple */
